edit license file

--- a/index.html
+++ b/index.html
@@ -10,38 +10,45 @@
 
   <body>
     <header>
-      <p id="logo">Ajrass</p>
-      <button  id="menu-button" type="button">
+      <a id="logo" href="#">Ajrass</a>
+      <nav>
         <img src="./svg/menu-button.svg" alt="menu-button">
-      </button>
+      </nav>
     </header>
     <main>
-      <div id="headline">
-        <div id="icon">
-          <img src="./svg/side-pic.svg" alt="menu-icon">
-        </div>
-        <h1 id="salut">Hey There.<br>I'm Ajrass</h1><br>
-        <h2 id="job">I'm a Software Developer</h2><br>
+      <section id="headline">
+        <h1 id="salut">Hey There.<br>I'm Ajrass.</h1>
+        <h2 id="job">I'm a Software Developer</h2>
         <p id="description">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
     don't hesitate to contact me.</p><br>
-        <div id="links">
-          <a class="link" href="https://github.com/tajemouti" rel="noopener noreferrer" target="_blank">
+        <ul id="links">
+          <li>
+            <a class="link" href="https://github.com/tajemouti" rel="noopener noreferrer" target="_blank">
             <img src="./svg/github.svg" alt="GitHub">
-          </a>
-          <a class="link" href="https://www.linkedin.com/in/ajrass" rel="noopener noreferrer" target="_blank">
-            <img src="./svg/linkedin.svg" alt="LinkedIn">
-          </a>
-          <a class="link" href="https://wellfound.com/u/ajrass-tajemouti" rel="noopener noreferrer" target="_blank">
-            <img src="./svg/wellfound.svg" alt="WellFound">
-          </a>
-          <a class="link" href="https://twitter.com/AjrassTajemouti" rel="noopener noreferrer" target="_blank">
-            <img src="./svg/twitter.svg" alt="Twitter">
-          </a>
-          <a class="link" href="https://medium.com/@tajemouti/" rel="noopener noreferrer" target="_blank">
-            <img src="./svg/medium.svg" alt="Medium">
-          </a>
-        </div>
-      </div>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="https://www.linkedin.com/in/ajrass" rel="noopener noreferrer" target="_blank">
+              <img src="./svg/linkedin.svg" alt="LinkedIn">
+            </a>
+          </li>
+          <li>
+            <a class="link" href="https://wellfound.com/u/ajrass-tajemouti" rel="noopener noreferrer" target="_blank">
+              <img src="./svg/wellfound.svg" alt="WellFound">
+            </a>
+          </li>
+          <li>
+            <a class="link" href="https://twitter.com/AjrassTajemouti" rel="noopener noreferrer" target="_blank">
+              <img src="./svg/twitter.svg" alt="Twitter">
+            </a>
+          </li>
+          <li>
+            <a class="link" href="https://medium.com/@tajemouti/" rel="noopener noreferrer" target="_blank">
+              <img src="./svg/medium.svg" alt="Medium">
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
