--- a/index.html
+++ b/index.html
@@ -7,48 +7,167 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Ajrass Portfolio</title>
   </head>
-
   <body>
     <header>
-      <a id="logo" href="#">Ajrass</a>
-      <nav>
-        <img src="./svg/menu-button.svg" alt="menu-button">
+      <nav class="tool-bar">
+        <a class="logo" href="#">Ajrass</a>
+        <a class="menu-ico" href="#"><img src="default/SVG/IconMenu.svg" alt="Menu Icon"></a>
       </nav>
     </header>
-    <main>
-      <section id="headline">
-        <h1 id="salut">Hey There.<br>I'm Ajrass.</h1>
-        <h2 id="job">I'm a Software Developer</h2>
-        <p id="description">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-    don't hesitate to contact me.</p><br>
-        <ul id="links">
-          <li>
-            <a class="link" href="https://github.com/tajemouti" rel="noopener noreferrer" target="_blank">
-            <img src="./svg/github.svg" alt="GitHub">
-            </a>
-          </li>
-          <li>
-            <a class="link" href="https://www.linkedin.com/in/ajrass" rel="noopener noreferrer" target="_blank">
-              <img src="./svg/linkedin.svg" alt="LinkedIn">
-            </a>
-          </li>
-          <li>
-            <a class="link" href="https://wellfound.com/u/ajrass-tajemouti" rel="noopener noreferrer" target="_blank">
-              <img src="./svg/wellfound.svg" alt="WellFound">
-            </a>
-          </li>
-          <li>
-            <a class="link" href="https://twitter.com/AjrassTajemouti" rel="noopener noreferrer" target="_blank">
-              <img src="./svg/twitter.svg" alt="Twitter">
-            </a>
-          </li>
-          <li>
-            <a class="link" href="https://medium.com/@tajemouti/" rel="noopener noreferrer" target="_blank">
-              <img src="./svg/medium.svg" alt="Medium">
-            </a>
-          </li>
+    <section class="headline background">
+      <h1 class="hello">Hey There.<br>I'm Ajrass.</h1>
+      <h2 class="iam">I'm a Software Developer</h2>
+      <p class="description">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                don’t hesitate to contact me.</p>
+      <ul class="social">
+        <li>
+          <a class="link" href="https://github.com/tajemouti" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/IconGitHub.svg" alt="GitHub">
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://www.linkedin.com/in/ajrass" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/Icon Linkedin.svg" alt="LinkedIn">
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://wellfound.com/u/ajrass-tajemouti" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/IconAngelist.svg" alt="WellFound">
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://twitter.com/AjrassTajemouti" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/IconTwitter.svg" alt="Twitter">
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://medium.com/@tajemouti/" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/IconMedium.svg" alt="Medium">
+          </a>
+        </li>
+      </ul>
+    </section>
+    
+    <section class="work">
+      <h1 class="title">My Recent Works</h1>
+      <hr class="line">
+      <div class="frame">
+
+        <div class="prointro">
+          <img class="placeholder" src="default/PNG/img-placeholder.png" alt="imageholder">
+          <div>
+            <h2 class="stories">Multi-Post Stories</h2>
+            <p class="stories-description">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+            <ul class="lang">
+              <li class="lang-list">JavaScript</li>
+              <li class="lang-list">HTML</li>
+              <li class="lang-list">CSS</li>
+            </ul>
+            <button class="button" type="button">
+              <a href="#" target="_blank">See project</a>
+            </button>
+          </div>
+        </div>
+
+        <div class="projects">
+          <div class="placeholder1">
+            <h2 class="title1">Profesional Art Printing Data</h2>
+            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <ul class="lang">
+              <li class="lang-list white">JavaScript</li>
+              <li class="lang-list white">HTML</li>
+              <li class="lang-list white">CSS</li>
+            </ul>
+            <button class="button large" type="button">
+              <a href="#" target="_blank">See project</a>
+            </button>
+          </div>
+          <div class="placeholder1">
+            <h2 class="title1">Profesional Art Printing Data</h2>
+            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <ul class="lang">
+              <li class="lang-list white">JavaScript</li>
+              <li class="lang-list white">HTML</li>
+              <li class="lang-list white">CSS</li>
+            </ul>
+            <button class="button large" type="button">
+              <a href="#" target="_blank">See project</a>
+            </button>
+          </div>
+          <div class="placeholder1">
+            <h2 class="title1">Profesional Art Printing Data</h2>
+            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <ul class="lang">
+              <li class="lang-list white">JavaScript</li>
+              <li class="lang-list white">HTML</li>
+              <li class="lang-list white">CSS</li>
+            </ul>
+            <button class="button large" type="button">
+              <a href="#" target="_blank">See project</a>
+            </button>
+          </div>
+          <div class="placeholder1">
+            <h2 class="title1">Profesional Art Printing Data</h2>
+            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <ul class="lang">
+              <li class="lang-list white">JavaScript</li>
+              <li class="lang-list white">HTML</li>
+              <li class="lang-list white">CSS</li>
+            </ul>
+            <button class="button large" type="button">
+              <a href="#" target="_blank">See project</a>
+            </button>
+          </div>
+          <div class="placeholder1">
+            <h2 class="title1">Profesional Art Printing Data</h2>
+            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <ul class="lang">
+              <li class="lang-list white">JavaScript</li>
+              <li class="lang-list white">HTML</li>
+              <li class="lang-list white">CSS</li>
+            </ul>
+            <button class="button large" type="button">
+              <a href="#" target="_blank">See project</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about">
+      <div class="container">
+        <h1 class="aboutme">About me</h1>
+        <p class="description1">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+        <button class="button resume" type="button">
+          <a href="#" target="_blank">Get my resume</a>
+        </button>
+        <hr class="line">
+      </div>
+      <div class="languages">
+        <div class="skills"><img class="pin" src="default/SVG/Rectangle55.svg" alt="pin1"><h3 class="bold-text">Language</h3></div>
+        <ul >
+          <li classe="language-list">JavaScript</li><br>
+          <li classe="language-list">Ruby</li><br>
+          <li classe="language-list">HTML</li><br>
+          <li classe="language-list">CSS</li>
         </ul>
-      </section>
-    </main>
+        <div class="skills"><img class="pin" src="default/SVG/Rectangle56.svg" alt="pin2"><h3 class="bold-text">Frameworks</h3></div>
+        <ul >
+          <li classe="language-list">React.js</li><br>
+          <li classe="language-list">Ruby on Rails</li><br>
+          <li classe="language-list">RSpec</li><br>
+          <li classe="language-list">Capybara</li><br>
+        </ul>
+        <div class="skills"><img class="pin" src="default/SVG/Rectangle57.svg" alt="pin3"><h3 class="bold-text">Skills</h3></div>
+        <ul >
+          <li classe="language-list">Data Management</li><br>
+          <li classe="language-list">Version Control</li><br>
+          <li classe="language-list">CLI</li><br>
+          <li classe="language-list">API Design</li>
+        </ul>
+
+      </div>
+
+    </section>
+
   </body>
 </html>
