re-edit html and css files

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     
     <section class="work">
       <h1 class="title">My Recent Works</h1>
-      <hr class="line">
       <div class="frame">
-
+        
+        <hr class="line1">
         <div class="prointro">
           <img class="placeholder" src="default/PNG/img-placeholder.png" alt="imageholder">
           <div>
