excute the requested changes

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   <body>
     <header>
       <nav class="tool-bar">
-        <a class="logo" href="#">Ajrass</a>
-        <a class="menu-ico" href="#"><img src="default/SVG/IconMenu.svg" alt="Menu Icon"></a>
+        <div class="logo">
+          <a href="#">Ajrass</a>
+        </div>
+        <div class="menu-icon">
+          <a class="menu-icon" href="#"><img src="default/SVG/IconMenu.svg" alt="Menu Icon"></a>
+        </div>
       </nav>
     </header>
     <section class="headline background">
       <h1 class="hello">Hey There.<br>I'm Ajrass.</h1>
       <h2 class="iam">I'm a Software Developer</h2>
       <p class="description">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-                don’t hesitate to contact me.</p>
+        don’t hesitate to contact me.
+      </p>
       <ul class="social">
         <li>
           <a class="link" href="https://github.com/tajemouti" rel="noopener noreferrer" target="_blank">
@@ -47,127 +52,160 @@
         </li>
       </ul>
     </section>
-    
-    <section class="work">
-      <h1 class="title">My Recent Works</h1>
-      <div class="frame">
-        
-        <hr class="line1">
-        <div class="prointro">
-          <img class="placeholder" src="default/PNG/img-placeholder.png" alt="imageholder">
-          <div>
-            <h2 class="stories">Multi-Post Stories</h2>
-            <p class="stories-description">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-            <ul class="lang">
-              <li class="lang-list">JavaScript</li>
-              <li class="lang-list">HTML</li>
-              <li class="lang-list">CSS</li>
+    <section class="work-section">
+      <div class="work-section-heading">
+        <h2 class="work-section-title">My Recent Works</h2>
+        <hr class="divider">
+      </div>
+      <div class="projects-grid">
+        <div class="stories-item">
+          <div class="img-placeholder"></div>
+          <div class="right-block1">
+            <h3 class="right-block1-heading">Multi-Post Stories</h3>
+            <p class="right-block1-description">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+            <ul class="lang1">
+              <li class="lang-list1">CSS</li>
+              <li class="lang-list1">HTML</li>
+              <li class="lang-list1">Bootstrap</li>
+              <li class="lang-list1">Ruby</li>
             </ul>
-            <button class="button" type="button">
-              <a href="#" target="_blank">See project</a>
-            </button>
+            <button type="button">See project</button>
           </div>
         </div>
-
-        <div class="projects">
-          <div class="placeholder1">
-            <h2 class="title1">Profesional Art Printing Data</h2>
-            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-            <ul class="lang">
-              <li class="lang-list white">JavaScript</li>
-              <li class="lang-list white">HTML</li>
-              <li class="lang-list white">CSS</li>
-            </ul>
-            <button class="button large" type="button">
-              <a href="#" target="_blank">See project</a>
-            </button>
+        <div class="cards-item">
+          <div class="card">
+            <div class="card-img">
+              <img src="default/PNG/img-placeholder1.png" alt="placeholder">
+            </div>
+            <div class="right-block2">
+              <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
+              <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+              <ul class="lang2">
+                <li class="lang-list2">HTML</li>
+                <li class="lang-list2">Bootstrap</li>
+                <li class="lang-list2">Ruby</li>
+              </ul>
+            </div>
+            <button class="large-button" type="button">See project</button>
           </div>
-          <div class="placeholder1">
-            <h2 class="title1">Profesional Art Printing Data</h2>
-            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-            <ul class="lang">
-              <li class="lang-list white">JavaScript</li>
-              <li class="lang-list white">HTML</li>
-              <li class="lang-list white">CSS</li>
-            </ul>
-            <button class="button large" type="button">
-              <a href="#" target="_blank">See project</a>
-            </button>
+          <div class="card">
+            <div class="card-img">
+              <img src="default/PNG/img-placeholder1.png" alt="placeholder">
+            </div>
+            <div class="right-block2">
+              <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
+              <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+              <ul class="lang2">
+                <li class="lang-list2">HTML</li>
+                <li class="lang-list2">Bootstrap</li>
+                <li class="lang-list2">Ruby</li>
+              </ul>
+            </div>
+            <button class="large-button" type="button">See project</button>
           </div>
-          <div class="placeholder1">
-            <h2 class="title1">Profesional Art Printing Data</h2>
-            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-            <ul class="lang">
-              <li class="lang-list white">JavaScript</li>
-              <li class="lang-list white">HTML</li>
-              <li class="lang-list white">CSS</li>
-            </ul>
-            <button class="button large" type="button">
-              <a href="#" target="_blank">See project</a>
-            </button>
+          <div class="card">
+            <div class="card-img">
+              <img src="default/PNG/img-placeholder1.png" alt="placeholder">
+            </div>
+            <div class="right-block2">
+              <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
+              <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+              <ul class="lang2">
+                <li class="lang-list2">HTML</li>
+                <li class="lang-list2">Bootstrap</li>
+                <li class="lang-list2">Ruby</li>
+              </ul>
+            </div>
+            <button class="large-button" type="button">See project</button>
           </div>
-          <div class="placeholder1">
-            <h2 class="title1">Profesional Art Printing Data</h2>
-            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-            <ul class="lang">
-              <li class="lang-list white">JavaScript</li>
-              <li class="lang-list white">HTML</li>
-              <li class="lang-list white">CSS</li>
-            </ul>
-            <button class="button large" type="button">
-              <a href="#" target="_blank">See project</a>
-            </button>
+          <div class="card">
+            <div class="card-img">
+              <img src="default/PNG/img-placeholder1.png" alt="placeholder">
+            </div>
+            <div class="right-block2">
+              <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
+              <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+              <ul class="lang2">
+                <li class="lang-list2">HTML</li>
+                <li class="lang-list2">Bootstrap</li>
+                <li class="lang-list2">Ruby</li>
+              </ul>
+            </div>
+            <button class="large-button" type="button">See project</button>
           </div>
-          <div class="placeholder1">
-            <h2 class="title1">Profesional Art Printing Data</h2>
-            <p class="description1">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-            <ul class="lang">
-              <li class="lang-list white">JavaScript</li>
-              <li class="lang-list white">HTML</li>
-              <li class="lang-list white">CSS</li>
-            </ul>
-            <button class="button large" type="button">
-              <a href="#" target="_blank">See project</a>
-            </button>
+          <div class="card">
+            <div class="card-img">
+              <img src="default/PNG/img-placeholder1.png" alt="placeholder">
+            </div>
+            <div class="right-block2">
+              <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
+              <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+              <ul class="lang2">
+                <li class="lang-list2">HTML</li>
+                <li class="lang-list2">Bootstrap</li>
+                <li class="lang-list2">Ruby</li>
+              </ul>
+            </div>
+            <button class="large-button" type="button">See project</button>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="default/PNG/img-placeholder1.png" alt="placeholder">
+            </div>
+            <div class="right-block2">
+              <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
+              <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+              <ul class="lang2">
+                <li class="lang-list2">HTML</li>
+                <li class="lang-list2">Bootstrap</li>
+                <li class="lang-list2">Ruby</li>
+              </ul>
+            </div>
+            <button class="large-button" type="button">See project</button>
           </div>
         </div>
       </div>
     </section>
-    <section class="about">
-      <div class="container">
-        <h1 class="aboutme">About me</h1>
-        <p class="description1">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
-        <button class="button resume" type="button">
-          <a href="#" target="_blank">Get my resume</a>
-        </button>
-        <hr class="line">
+    <section class="about-me">
+      <h2 class="about-me-heading">About me</h2>
+      <p class="about-me-description">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+      <button class="larger" type="button">Get my resume</button>
+      <hr class="line">
+      <div class="skills">
+        <div class="language">
+          <div class="skill-heading">
+            <img src="default/SVG/Rectangle55.svg" alt="shape">
+            <h3>Language</h3>
+          </div>
+          <ul class="skill">
+            <li class="skill-list">JavaScript</li>
+            <li class="skill-list">Ruby</li>
+            <li class="skill-list">HTML</li>
+            <li class="skill-list">CSS</li>
+          </ul>
+          <div class="skill-heading">
+            <img src="default/SVG/Rectangle56.svg" alt="shape">
+            <h3>Frameworks</h3>
+          </div>
+          <ul class="skill">
+            <li class="skill-list">React.js</li>
+            <li class="skill-list">Ruby on Rails</li>
+            <li class="skill-list">RSpec</li>
+            <li class="skill-list">Capybara</li>
+          </ul>
+          <div class="skill-heading">
+            <img src="default/SVG/Rectangle57.svg" alt="shape">
+            <h3>Skills</h3>
+          </div>
+          <ul class="skill">
+            <li class="skill-list">Database Management</li>
+            <li class="skill-list">Version Control</li>
+            <li class="skill-list">CLI</li>
+            <li class="skill-list">API Design</li>
+            <li class="skill-list">Web Development</li>
+          </ul>
+        </div>
       </div>
-      <div class="languages">
-        <div class="skills"><img class="pin" src="default/SVG/Rectangle55.svg" alt="pin1"><h3 class="bold-text">Language</h3></div>
-        <ul >
-          <li classe="language-list">JavaScript</li><br>
-          <li classe="language-list">Ruby</li><br>
-          <li classe="language-list">HTML</li><br>
-          <li classe="language-list">CSS</li>
-        </ul>
-        <div class="skills"><img class="pin" src="default/SVG/Rectangle56.svg" alt="pin2"><h3 class="bold-text">Frameworks</h3></div>
-        <ul >
-          <li classe="language-list">React.js</li><br>
-          <li classe="language-list">Ruby on Rails</li><br>
-          <li classe="language-list">RSpec</li><br>
-          <li classe="language-list">Capybara</li><br>
-        </ul>
-        <div class="skills"><img class="pin" src="default/SVG/Rectangle57.svg" alt="pin3"><h3 class="bold-text">Skills</h3></div>
-        <ul >
-          <li classe="language-list">Data Management</li><br>
-          <li classe="language-list">Version Control</li><br>
-          <li classe="language-list">CLI</li><br>
-          <li classe="language-list">API Design</li>
-        </ul>
-
-      </div>
-
     </section>
-
   </body>
 </html>
