Re-fixed linters errors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Ajrass Portfolio</title>
   </head>
   <body>
+    <script src="babel/index.babel"></script>
     <header>
       <nav class="tool-bar">
         <div class="logo">
