fix linters errors

--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
         </ul>
       </section>
       <section class="work-section">
-        <h2 class="work-section-title">My Recent Works</h2>
-        <hr class="divider">
+        <span>
+          <h2 class="work-section-title">My Recent Works</h2>
+          <hr class="divider">
+        </span>
         <article class="projects-grid">
           <section class="stories-item">
-            <div class="img-placeholder"></div>
+            <img class="img-placeholder" src="default/PNG/img-placeholder.png" alt="image">
             <div class="right-block1">
               <h3 class="right-block1-heading">Multi-Post Stories</h3>
               <p class="right-block1-description">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
@@ -168,30 +170,30 @@
         <hr class="line">
         <section class="skills">
           <div class="language">
-            <div class="skill-heading">
+            <span class="skill-heading">
               <img src="default/SVG/Rectangle55.svg" alt="shape">
               <h3>Language</h3>
-            </div>
+            </span>
             <ul class="skill">
               <li class="skill-list">JavaScript</li>
               <li class="skill-list">Ruby</li>
               <li class="skill-list">HTML</li>
               <li class="skill-list">CSS</li>
             </ul>
-            <div class="skill-heading">
+            <span class="skill-heading">
               <img src="default/SVG/Rectangle56.svg" alt="shape">
               <h3>Frameworks</h3>
-            </div>
+            </span>
             <ul class="skill">
               <li class="skill-list">React.js</li>
               <li class="skill-list">Ruby on Rails</li>
               <li class="skill-list">RSpec</li>
               <li class="skill-list">Capybara</li>
             </ul>
-            <div class="skill-heading">
+            <span class="skill-heading">
               <img src="default/SVG/Rectangle57.svg" alt="shape">
               <h3>Skills</h3>
-            </div>
+            </span>
             <ul class="skill">
               <li class="skill-list">Database Management</li>
               <li class="skill-list">Version Control</li>
