make the requested changes

--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
         </ul>
       </section>
       <section class="work-section">
-        <span>
+        <div class="divider">
           <h2 class="work-section-title">My Recent Works</h2>
-          <hr class="divider">
-        </span>
+        </div>
         <article class="projects-grid">
           <section class="stories-item">
             <img class="img-placeholder" src="default/PNG/img-placeholder.png" alt="image">
