add a form section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
           </div>
         </section>
       </section>
+      <section id="form-section">
+
+      </section>
     </main>
   </body>
 </html>
