--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
         </section>
       </section>
       <section id="form-section">
-
+        <div class="form-heading">
+          <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        </div>
       </section>
     </main>
   </body>
