--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
       <section id="form-section">
         <div class="form-heading">
           <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+          <form action="">
+            <label for="">Full name</label>
+            <input type="text" id="name" name="name" placeholder="Full name" maxlength="30" required>
+          </form>
         </div>
       </section>
     </main>
