--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
         <div class="form-heading">
           <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
           <form action="">
-            <label for="">Full name</label>
             <input type="text" id="name" name="name" placeholder="Full name" maxlength="30" required>
+            <input type="email" name="email" id="email" placeholder="Email address" required>
+            <textarea name="text" id="textarea" cols="30" rows="10" placeholder="Write me something..." required></textarea>
           </form>
         </div>
       </section>
