add a footer to the page

--- a/index.html
+++ b/index.html
@@ -204,8 +204,45 @@
         </section>
       </section>
       <section id="form-section">
-
+        <div class="form-heading">
+          <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+          <form action="">
+            <input type="text" id="name" name="name" placeholder="Full name" maxlength="30" required>
+            <input type="email" name="email" id="email" placeholder="Email address" required>
+            <textarea name="text" id="textarea" cols="30" rows="10" placeholder="Write me something..." required></textarea>
+          </form>
+        </div>
       </section>
     </main>
+    <footer>
+      <ul class="social">
+        <li>
+          <a class="link" href="https://github.com/tajemouti" rel="noopener noreferrer" target="_blank">
+            <img class="color" src="default/SVG/Disabled1.svg" alt="GitHub">
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://www.linkedin.com/in/ajrass" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/Disabled2.svg" alt="LinkedIn">
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://wellfound.com/u/ajrass-tajemouti" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/Disabled3.svg" alt="WellFound">
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://twitter.com/AjrassTajemouti" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/Disabled4.svg" alt="Twitter">
+          </a>
+        </li>
+        <li>
+          <a class="link" href="https://medium.com/@tajemouti/" rel="noopener noreferrer" target="_blank">
+            <img src="default/SVG/Disabled5.svg" alt="Medium">
+          </a>
+        </li>
+      </ul>
+      <div id="bottom-line"></div>
+    </footer>
   </body>
 </html>
