Add a active state button to the form

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
             <input id="email" name="email" type="email" placeholder="Email address" required>
           </label>
           <label for="message">
-            <textarea name="message" maxlength="500" required>Write me something...</textarea>
+            <textarea name="message" maxlength="500" placeholder="Write me something..." required></textarea>
           </label>
-          <button type="submit">Get in touch</button>
+          <button class="btn" type="submit">Get in touch</button>
         </form>
       </section>
     </main>
