style the work section in the desktop version

--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
         </div>
       </section>
       <section id="work-section">
-        <div class="divider">
+        <div class="work-section-heading">
           <h2 class="work-section-title">My Recent Works</h2>
+          <hr class="divider">
         </div>
-        <article class="projects-grid">
+        <article class="projects">
           <section class="stories-item">
             <img class="img-placeholder" src="default/PNG/img-placeholder.png" alt="image">
             <div class="right-block1">
@@ -84,7 +85,7 @@
               <button type="button">See project</button>
             </div>
           </section>
-          <section class="cards-item">
+          <section class="cards-grid">
             <aside class="card">
               <div class="card-img">
                 <img src="default/PNG/img-placeholder1.png" alt="placeholder">
