--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       </section>
     </main>
     <footer>
-      <ul class="social">
+      <ul class="social-footer">
         <li>
           <a class="link" href="https://github.com/tajemouti" rel="noopener noreferrer" target="_blank">
             <img class="color" src="default/SVG/Disabled1.svg" alt="GitHub">
