Change the alternative text for main project card image

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <article class="projects">
           <section class="stories-item">
-            <img class="img-placeholder" src="default/PNG/img-placeholder.png" alt="image">
+            <img class="img-placeholder" src="default/PNG/img-placeholder.png" alt="main-card">
             <div class="right-block1">
               <h3 class="right-block1-heading">Multi-Post Stories</h3>
               <p class="right-block1-description">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
